--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-TOKEN=MTIxMTM0NzQyNjA3MDIzNzI1NQ.GejUgh.ROs-5eg_yVVkraar12shrlhiqJSt-TrlEBSq00
+TOKEN=MTIxMTM0NzQyNjA3MDIzNzI1NQ.G-WrCw.3EJyBu34c-D4Oc7drSGPbDECi_X6ZhKMbuy2qk
